@@ -32,33 +32,11 @@ public class GHResponse
 {
     private String debugInfo = "";
     private final List<Throwable> errors = new ArrayList<Throwable>(4);
-    private final PMap hintsMap = new PMap();
-    private PointList pointList;
+    private final PMap hintsMap = new PMap();    
     private final List<PathWrapper> pathWrappers = new ArrayList<PathWrapper>(5);
 
     public GHResponse()
     {
-    }
-
-    /**
-     * This method initializes the response with the input points.
-     */
-    @Deprecated
-    public void setPoints( PointList pointList )
-    {
-        this.pointList = pointList;
-    }
-
-    /**
-     * This method returns the input points snapped to the road network. I.e. the first points of
-     * the instructions' points including the destination point.
-     */
-    @Deprecated
-    public PointList getPoints()
-    {
-        if (pointList == null)
-            throw new IllegalStateException("Call setPoints before calling GHResponse.getPoints");
-        return pointList;
     }
 
     public void add( PathWrapper altResponse )
